# QuickDEM4JP

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  Pipfile  README.md  __init__.py  contents.py  convert_DEM_to_geoTiff_contents.py  convert_dem_to_geotiff.py  convert_dem_to_geotiff_contents.py  convert_dem_to_geotiff_dialog.py  convert_dem_to_geotiff_dialog_base.ui  metadata.txt  pb_tool.cfg  plugin.py  progress_dialog.py  progress_dialog.ui  pyproject.toml  quick_dem_for_jp.pro  quick_dem_for_jp.py  quick_dem_for_jp_dialog.py  quick_dem_for_jp_dialog_base.ui  resources.py  resources.qrc  test_suite.py  ui_convert_dem_to_geotiff.py  ui_convert_dem_to_geotiff_dialog.py  ui_quick_dem_for_jp_dialog_base.py
.github/workflows/: lint.yaml  release.yaml  test.yaml
convert_fgd_dem/: __init__.py  __main__.py  converter.py  dem.py  geotiff.py  helpers.py
convert_fgd_dem/lib/riomucho/: __init__.py
i18n/: QuickDEMforJP_en.ts  QuickDEMforJP_ja.qm  QuickDEMforJP_ja.ts
processing_provider/: quick_dem_for_jp_algorithm.py  quick_dem_for_jp_provider.py
tests/: conftest.py  test_dialog.py  test_plugin.py
